<resources>
    <string name="app_name">HuaRongRoad</string>
    <string name="welcome_content">Welcome\nLoliman\'s World</string>
    <string name="start_game">Start Game</string>
    <string name="title_activity_start_game">StartGameActivity</string>
    <string name="title_activity_game_main">GameMainActivity</string>
    <string name="hdlm">横刀立马</string>
    <string name="jzzc">近在咫尺</string>
    <string name="qgwg">巧过五关</string>
    <string name="sxbt">水泄不通</string>
    <string name="xycc">小燕出巢</string>
</resources>
